Polishing.
Refine temporal formatting, report sunset time.